CHANGELOG
=========

3.7.0 (unreleased)
------------------

* [CHANGED] #5571 calculation of total value change from size to queued + registered


3.6.0 (2019-01-20)
------------------

* Moodle 3.6 compatible version
* merged PR #11 from from germanvaleroelizondo/master fixing a typo in lang strings
* [FEATURE] #5731 added a first behat test adding a grouptool instance
* [FEATURE] #5752 add new core_userlist_provider methods to privacy provider
* [FEATURE] #5834 enable users to look at groups/registrations in frozen contexts and export them
* [FIXED] #5602 fix calculation for fast unit tests
* [FIXED] #5874 fix queue limits for users and groups not being deactivateable
* [FIXED] #5872 prevent users from reaching incorrect_tabs (per default, or otherwise)
* [CHANGED] #5705 standardized labels and strings
* [CHANGED] #5706 unify appearance of information in language strings
* [CHANGED] #5602 reorganized unit test
* [CHANGED] #5602 replace tab in feature file with spaces
* [CHANGED] #5602 remove leading slashes in namespace and use statements
* [UPDATE] #5602 update .travis.yml


3.5.1 (2018-08-28)
------------------

* [FIXED] #5716 fix XLSX and ODS exports missing some user identity fields data for registered users


3.5.0 (2018-07-01)
------------------

* [FEATURE] #5379 implemented privacy API, so we're GDPR conform
* [FEATURE] #5054 if groups are now recreated due to a grouptool's settings, the user gets notified via info-notification also we
*                 disabled the groups' deletion buttons as soon as there's a grouptool instance set to recreate the groups in the
*                 course
* [FIXED]   #5556 due to some missing column aliases, some registrations promoted from the queue have no correct timestamp, this is
*                 fixed for future entries, but current entries can't be fixed automatically
* [CHANGED] #5086 removed german lang strings from repository
* [CHANGED] #4764 added link to group administration in groups-created-success message