@@ -4,6 +4,7 @@ CHANGELOG
 3.7.0 (unreleased)
 ------------------
 
+* [FEATURE] #6128 report-editdates support added
 * [CHANGED] #5571 calculation of total value change from size to queued + registered
 
 
